# distance-assistant

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  run.bash
distance_assistant/: CMakeLists.txt  package.xml
distance_assistant/launch/: distance_assistant.launch
distance_assistant/msg/: BboxMsg.msg  DetectionMsg.msg  DetectionsMsg.msg
distance_assistant/rviz/: config_file.rviz
distance_assistant/scripts/: distance_assistant_node.py
distance_assistant/src/: darknet_custom.py  temporal_filter.py
distance_assistant/src/cfg/: coco.data
distance_assistant_ansible/: README.md
distance_assistant_ansible/ansible/: all.yml  ansible.cfg  test.yml
distance_assistant_ansible/ansible/group_vars/: all
distance_assistant_ansible/ansible/host_vars/: all
distance_assistant_ansible/ansible/roles/da_container/files/: 99-zzz-da_realsense.rules  da_log.logrotate  da_udev.sh  find_intellisync_cameras.py  flash_logo.sh  reset_usb.sh  status.py
distance_assistant_ansible/ansible/roles/da_container/tasks/: main.yml
distance_assistant_ansible/ansible/roles/da_container/templates/: da_service.j2  run_da.sh.j2  stop_da.sh.j2
distance_assistant_ansible/ansible/roles/da_container_build/tasks/: main.yml  main.yml~
distance_assistant_ansible/ansible/roles/da_kiosk/files/: check_usb_speed_intel_rs.sh  conkyrc  connection_status.sh  lightdm.conf  xmonad.hs  xmonad_autostart.sh
distance_assistant_ansible/ansible/roles/da_kiosk/tasks/: main.yml
distance_assistant_ansible/ansible/roles/da_sound/files/: da_alerts.py
distance_assistant_ansible/ansible/roles/da_sound/tasks/: main.yml
distance_assistant_ansible/ansible/roles/da_sound/templates/: da_sound_service.j2
distance_assistant_ansible/ansible/roles/docker/files/: daemon.gpu.json
distance_assistant_ansible/ansible/roles/docker/tasks/: main.yml
distance_assistant_ansible/ansible/roles/docker/templates/: docker_daemon.json.j2
distance_assistant_ansible/ansible/roles/nvidia/tasks/: main.yml
distance_assistant_ansible/ansible/roles/realsense/tasks/: main.yml
distance_assistant_ansible/ansible/roles/reboot/tasks/: main.yml
distance_assistant_ansible/ansible/roles/set_53_kernel/tasks/: main.yml
distance_assistant_ansible/ansible/roles/ssh/tasks/: main.yml
distance_assistant_ansible/ansible/roles/usb-reset/tasks/: main.yml
distance_assistant_ansible/ansible/roles/users/files/sudoers.d/: da_service
distance_assistant_ansible/ansible/roles/users/tasks/: main.yml
distance_assistant_ansible/ansible/templates/: application.sh.j2
librealsense/: README.md  patch-utils.sh
