<?xml version="1.0"?>
<package format="2">
  <name>distance_assistant</name>
  <version>0.0.0</version>
  <description>The prototype code for Distance Assistant project</description>

  <maintainer email="distance-assistant@amazon.com">distance-assistant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
